[project]
name = "unctad"
version = "0.1.0"
description = "UNCTAD data connector"
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "pyarrow",
    "tenacity",
    "boto3",
    "py7zr",
    "ratelimit",
    "duckdb",
    "requests",
    "pyiceberg",
    "sqlalchemy>=2.0.43",
]

[tool.uv]
dev-dependencies = []
